<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvanceLevel">

    <ImageView
        android:id="@+id/imageView_advance_level_car01"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/editText_advance_level_car01"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editText_advance_level_car03"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/hint_car_03_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_advance_level_car02" />

    <EditText
        android:id="@+id/editText_advance_level_car02"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/hint_car_02_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_advance_level_car01" />

    <EditText
        android:id="@+id/editText_advance_level_car01"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/hint_car_01_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_advance_level_car02"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/editText_advance_level_car02"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_advance_level_car01"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView_advance_level_car03"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/editText_advance_level_car03"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_advance_level_car02"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button_advance_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="advanceLevelButtonHandler"
        android:text="@string/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_advance_level_car03"
        android:background="@drawable/button_bg"/>

    <TextView
        android:id="@+id/textView_advance_level_car01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_advance_level_car01"
        app:layout_constraintTop_toBottomOf="@+id/editText_advance_level_car01" />

    <TextView
        android:id="@+id/textView_advance_level_car02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_advance_level_car02"
        app:layout_constraintTop_toBottomOf="@+id/editText_advance_level_car02" />

    <TextView
        android:id="@+id/textView_advance_level_car03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_advance_level_car03"
        app:layout_constraintTop_toBottomOf="@+id/editText_advance_level_car03" />

    <TextView
        android:id="@+id/textView_advance_level_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView_advance_level_car01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/chances_count_label"/>

    <TextView
        android:id="@+id/textView_advance_level_points_Lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/score_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_advance_level_counter"
        app:layout_constraintStart_toEndOf="@+id/textView_advance_level_counter" />

    <TextView
        android:id="@+id/textView_advance_level_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_advance_level"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>